Formatting og copy

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,10 @@ h1 {
 .container {
     grid-area: container;
 }
+.copy {
+    color: black;
+    text-align: center;
+}
 .topnav ul{
     background: #f2f1ed; 
     }
