--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,17 @@ body {
 .container {
     max-width: 60em;
     margin: 0 auto; /* top+bottom og left+right */
-    padding: 0;
+    padding: 1em;
 }
 h1 {
+    font-size: 1.5em;
     color: #4B535D;
+}
+h3 {
+    color: #4B535D;
+}
+footer {
+    grid-area: footer;
 }
 .topnav {
     grid-area: topnav;
@@ -43,48 +50,103 @@ h1 {
 .rolesTitle {
     grid-area: rolesTitle;
 }
+.listi1 {
+    grid-area: listi1;
+}
+.listi2 {
+    grid-area: listi2;
+}
+.listi3 {
+    grid-area: listi3;
+}
 .copy {
+    margin: 0;
+    padding: 1em 0 0 0;
+    background: #545454;
     color: black;
     text-align: center;
 }
 .topnav ul{
     background: #f2f1ed; 
-    }
-    .topnav input {
+}
+.topnav input {
     display: none;
-    }
-    
-    .topmenu {
+}
+
+.topmenu {
     display: block;
     /* position: fixed; */
     padding: 0;
     margin: 0;
     list-style: none; 
-    
-    }
-    .topmenu li {
+
+}
+.topmenu li {
     border: 0;
     padding: 0;
     margin:0;
-    }
-    .topmenu li {
+}
+.topmenu li {
     border: 0;
     padding: 0;
-    }
-    .topmenu a {
+}
+.topmenu a {
     display: block;     /* ath! */
     color: #4b535d;
     text-decoration: none;
     text-align: center;
     padding: .4em 1em;
     padding-bottom: 3px; 
-    }
-    .topmenu a:hover,
-    .topmenu a:active,
-    .virkur {
+}
+.topmenu a:hover,
+.topmenu a:active,
+.virkur {
     color: #ff8900 !important;
     border-bottom: solid 3px #ff8900;
     padding-bottom: 0;
+}
+.roles {
+    display: grid;
+    grid-template-areas: 
+    "tank" 
+    "damage" 
+    "support";
+    grid-gap: 2em;
+    text-align: center;
+    justify-content: space-evenly;
+    align-self: auto;
+}
+footer {
+    background: #545454;
+    text-align: center;
+    display: grid;
+    grid-template-areas:
+    "listi1" 
+    "listi2" 
+    "listi3";
+}
+@media screen and (min-width: 48em) {
+    body {
+        height: 100%;
+        display: grid;
+        grid-template-areas: 
+        "topnav"
+        "logo"
+        "container"
+        "footer";
+    }
+    .topmenu {
+        display: flex;
+        max-width: 60em;
+        justify-content: space-around;
+        margin: 2em auto;
+    }
+    footer {
+        background: #545454;
+        text-align: center;
+        display: grid;
+        grid-template-areas:
+        "listi1 listi2 listi3";
     }
     .roles {
         display: grid;
@@ -95,24 +157,9 @@ h1 {
         justify-content: space-evenly;
         align-self: auto;
     }
-    @media screen and (min-width: 48em) {
-        body {
-            height: 100%;
-            display: grid;
-            grid-template-areas: 
-            "topnav"
-            "logo"
-            "container";
-        }
-        .topmenu {
-            display: flex;
-            max-width: 60em;
-            justify-content: space-around;
-            margin: 2em auto;
-        }
-        .logo {
-            padding: 2em 0;
-            max-width: 60em;
-            margin: 1em auto .5em;
-        }
+    .logo {
+        padding: 2em 0;
+        max-width: 60em;
+        margin: 1em auto .5em;
     }
+}
